# cc-function-routing

./: .gitignore  README.md
scripts/: build.sh  clean.sh
source/: CMakeLists.txt  application.c  timestamped_logger.c
